# opengl-stuff

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: logger.h  renderer.h  window.h
shaders/: terrain.frag  terrain.vert
src/: logger.cpp  main.cpp  renderer.cpp  window.cpp
